[tool.poetry]
name = "shape-tracker"
version = "0.1.0"
description = "A simple shape tracker written in python as an interview assignment"
authors = ["Jakub Malý <malyjak@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
logging = "^0.4.9.6"
pathlib = "^1.0.1"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
